# DroneFirmware

./: CMakeLists.txt  CMakePresets.json  CMakePresetsCrossPlatformMaybe.json  REAMDE.md  justfile
src/: CMakeLists.txt  main.c
